<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/grad_bg"
    android:padding="23dp"
    tools:context=".about">

    <TextView
        android:id="@+id/textView"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_cse_heading"
        android:textColor="?attr/textcolor"
        android:textSize="30sp"
        android:paddingBottom="25dp"
        android:fontFamily="normal"

 />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_cse"
        android:textSize="15sp"
        android:fontFamily="normal"
        android:textColor="?attr/textcolor"
        android:paddingBottom="9dp"/>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="VISION"
        android:textColor="?attr/textcolor"
        android:textSize="20sp"
        android:fontFamily="normal"
        android:textStyle="italic"
        />


    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="To contribute competent computer science professionals to the global talent pool to meet the constantly evolving societal needs.
"
        android:textColor="?attr/textcolor"
        android:fontFamily="normal"
        android:textSize="15sp"
        android:paddingBottom="9dp"
        />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="MISSION"
        android:textColor="?attr/textcolor"
        android:textSize="20sp"
        android:fontFamily="normal"
        android:textStyle="italic"
        />


    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/textcolor"
        android:text="@string/mission"
        android:paddingLeft="4dp"
        android:textSize="15sp"
        android:fontFamily="normal"
        android:paddingBottom="110dp"

       />

    <TextView
        android:paddingTop="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developers_heading"
        android:textSize="17sp"
        android:textColor="?attr/textcolor"
        android:textStyle="bold"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_the_developers"
        android:textSize="13sp"
        android:textColor="?attr/textcolor"
        android:paddingBottom="8dp"

        />

</LinearLayout>